feat: 添加说说点赞和评论总数的获取